force-app/main/default/objects/PayingDetail__c/PayingDetail__c.object-meta.xml
<CustomObject>
    <label>入金明細</label>
    <nameField>
        <displayFormat>DD-{000000000}</displayFormat>
        <label>入金明細ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>