force-app/main/default/objects/PayingDetail__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <label>請求</label>
    <referenceTo>Billing__c</referenceTo>
    <relationshipLabel>入金明細</relationshipLabel>
    <relationshipName>Billing_PayingDetail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>