force-app/main/default/objects/PayingDetail__c/fields/PaymentBankAccount__c.field-meta.xml
<CustomField>
    <fullName>PaymentBankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>入金口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>入金明細</relationshipLabel>
    <relationshipName>PayingDetail_BankAccount</relationshipName>
    <type>Lookup</type>
</CustomField>