force-app/main/default/objects/PayingDetail__c/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <label>入金日</label>
    <type>Date</type>
</CustomField>